Geometry Nodes Crash #86172

Closed
opened 2021-03-01 23:39:28 +01:00 by Aleksandr · 15 comments

System Information
Operating system: Linux-4.15.0-136-generic-x86_64-with-debian-buster-sid 64 Bits [Ubuntu 18.04.5]
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.102.04

Blender Version
Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: 02948a2cab
Worked: (newest version of Blender that worked as expected)

Short description of error

  1. Blender crashing when value "Density Max" of "Point Distribution node" is changing.
  2. Blender crashing when Copy-Paste geometry nodes to new "Geometry Nodes" data.

Exact steps for others to reproduce the error
Open my file and try what I described above.

Screencast-2021-03-02_01.28.08.mp4
Screencast-2021-03-02_01.28.58.mp4

GeoNodes_Crash.blend

GeoNodes_Crash.crash.txt

**System Information** Operating system: Linux-4.15.0-136-generic-x86_64-with-debian-buster-sid 64 Bits [Ubuntu 18.04.5] Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.102.04 **Blender Version** Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: `02948a2cab` Worked: (newest version of Blender that worked as expected) **Short description of error** 1. Blender crashing when value "Density Max" of "Point Distribution node" is changing. 2. Blender crashing when Copy-Paste geometry nodes to new "Geometry Nodes" data. **Exact steps for others to reproduce the error** Open my file and try what I described above. [Screencast-2021-03-02_01.28.08.mp4](https://archive.blender.org/developer/F9858065/Screencast-2021-03-02_01.28.08.mp4) [Screencast-2021-03-02_01.28.58.mp4](https://archive.blender.org/developer/F9858064/Screencast-2021-03-02_01.28.58.mp4) [GeoNodes_Crash.blend](https://archive.blender.org/developer/F9858062/GeoNodes_Crash.blend) [GeoNodes_Crash.crash.txt](https://archive.blender.org/developer/F9858073/GeoNodes_Crash.crash.txt)
Author

Added subscriber: @viadvena

Added subscriber: @viadvena
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report, I can confirm this.

Thanks for the report, I can confirm this.

This issue was referenced by f094b4fa08

This issue was referenced by f094b4fa08c970c48ff8f70952ecb3adf353539b
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2021-03-02 13:32:25 +01:00
Member

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'
Member

The commit above only fixed one of the issues. The copy issue still exist.
Next time, please report bugs separately.

The commit above only fixed one of the issues. The copy issue still exist. Next time, please report bugs separately.
Author

Next time, please report bugs separately.

@JacquesLucke Ok, thank you for support. I just thought this way will be more optimized for tracker.

> Next time, please report bugs separately. @JacquesLucke Ok, thank you for support. I just thought this way will be more optimized for tracker.
Member

The copy-issue seems to be depsgraph related. The issue is that the collections are disabled. However, we are still using the disabled collections from geometry nodes. I'm not yet sure how to solve this exactly.
Enabling the collections, fixes the crash in this file.

The copy-issue seems to be depsgraph related. The issue is that the collections are disabled. However, we are still using the disabled collections from geometry nodes. I'm not yet sure how to solve this exactly. Enabling the collections, fixes the crash in this file.
Member

I would think a disabled collection should be empty to geometry nodes.

I would think a disabled collection should be empty to geometry nodes.
Member

Issue is, I'm not quite sure what's the correct way to detect if a collection is disabled. Seems like the disabled status is not stored in the collection but in LayerCollection. Also, a collection instance still works when the collection is disabled, so I don't think that would be the correct fix here.
The solution should probably be to create all the depsgraph nodes for the objects in the collection, have to investigate how to do that a bit more.

Issue is, I'm not quite sure what's the correct way to detect if a collection is disabled. Seems like the disabled status is not stored in the collection but in `LayerCollection`. Also, a collection instance still works when the collection is disabled, so I don't think that would be the correct fix here. The solution should probably be to create all the depsgraph nodes for the objects in the collection, have to investigate how to do that a bit more.
Author

@HooglyBoogly I would think a disabled collection should be empty to geometry nodes.

No. It would break whole workflow. For example, when we using particles with instances it would be strange if we see big source model of instance in the middle of the screen. These meta objects should to have options to hide from all screens and all view layers, and to have way to use them from other scenes but it shouldn't touch their instances. Instances switching always was in the places where their was assigned. Actually how it was always works in Blender concept.

> @HooglyBoogly I would think a disabled collection should be empty to geometry nodes. No. It would break whole workflow. For example, when we using particles with instances it would be strange if we see big source model of instance in the middle of the screen. These meta objects should to have options to hide from all screens and all view layers, and to have way to use them from other scenes but it shouldn't touch their instances. Instances switching always was in the places where their was assigned. Actually how it was always works in Blender concept.

This issue was referenced by a988099ee4

This issue was referenced by a988099ee478dd7ab0eca79a24fb6102c5b68f82
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.93 LTS milestone 2023-02-07 18:46:30 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86172
No description provided.